force-app/main/default/objects/TREND_IDX_Premium_Product__c/TREND_IDX_Premium_Product__c.object-meta.xml
<CustomObject>
    <label>TREND IDX Premium Product</label>
    <nameField>
        <displayFormat>TIDX{000000}</displayFormat>
        <label>TREND IDX Premium Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TREND IDX Premium Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>