force-app/main/default/objects/TREND_IDX_Premium_Product__c/fields/Last_Trend_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Trend_Bill_Date__c</fullName>
    <label>Last Trend Bill Date</label>
    <type>Date</type>
</CustomField>