force-app/main/default/objects/TREND_IDX_Premium_Product__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TREND IDX Premium Products</relationshipLabel>
    <relationshipName>TREND_IDX_Premium_Products</relationshipName>
    <type>Lookup</type>
</CustomField>