force-app/main/default/objects/TREND_IDX_Premium_Product__c/fields/MRIS_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>MRIS_Subscription_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MRIS Subscription ID</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>TREND IDX Premium Products</relationshipLabel>
    <relationshipName>TREND_IDX_Premium_Products</relationshipName>
    <type>Lookup</type>
</CustomField>