force-app/main/default/objects/TREND_IDX_Premium_Product__c/fields/Office_ID__c.field-meta.xml
<CustomField>
    <fullName>Office_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TREND IDX Premium Products</relationshipLabel>
    <relationshipName>TREND_IDX_Premium_Products</relationshipName>
    <type>Lookup</type>
</CustomField>