force-app/main/default/objects/TREND_IDX_Premium_Product__c/fields/Product_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Product_Status_Reason__c</fullName>
    <label>Product Status Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>