force-app/main/default/objects/TREND_IDX_Premium_Product__c/fields/Product_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Type__c</fullName>
    <label>Product Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IDX Subscriber Monthly</fullName>
            </value>
            <value>
                <fullName>IDX Subscriber Semi Annual</fullName>
            </value>
            <value>
                <fullName>IDX Subscriber Schuylkill Monthly</fullName>
            </value>
            <value>
                <fullName>IDX Subscriber Multi Monthly</fullName>
            </value>
            <value>
                <fullName>IDX Subscriber Multi Semi Annual</fullName>
            </value>
            <value>
                <fullName>IDX Plus Subscriber Monthly</fullName>
            </value>
            <value>
                <fullName>IDX Plus Subscriber Semi Annual</fullName>
            </value>
            <value>
                <fullName>IDX Office Monthly</fullName>
            </value>
            <value>
                <fullName>IDX Office Semi Annual</fullName>
            </value>
            <value>
                <fullName>IDX Office Schuylkill Semi Annual</fullName>
            </value>
            <value>
                <fullName>IDX Office Multi</fullName>
            </value>
            <value>
                <fullName>IDX Plus Office Monthly</fullName>
            </value>
            <value>
                <fullName>IDX Plus Office Semi Annual</fullName>
            </value>
            <value>
                <fullName>IDX Plus Office Schuylkill Semi Annual</fullName>
            </value>
            <value>
                <fullName>IDX/VOW Subscriber Monthly</fullName>
            </value>
            <value>
                <fullName>IDX/VOW Subscriber Semi Annual</fullName>
            </value>
            <value>
                <fullName>IDX/VOW Office Monthly</fullName>
            </value>
            <value>
                <fullName>IDX/VOW Office Semi Annual</fullName>
            </value>
            <value>
                <fullName>Office Data Monthly</fullName>
            </value>
            <value>
                <fullName>Office Data Semi Annual</fullName>
            </value>
            <value>
                <fullName>Data, Gannett Monthly</fullName>
            </value>
            <value>
                <fullName>Data, Gannett Semi Annual</fullName>
            </value>
            <value>
                <fullName>Office Data Multi Monthly</fullName>
            </value>
            <value>
                <fullName>Office Data Multi Semi Annual</fullName>
            </value>
            <value>
                <fullName>Data, Voicepad Monthly</fullName>
            </value>
            <value>
                <fullName>Data, Voicepad Semi Annual</fullName>
            </value>
            <value>
                <fullName>VOW Subscriber Monthly</fullName>
            </value>
            <value>
                <fullName>VOW Subscriber Semi Annual</fullName>
            </value>
            <value>
                <fullName>VOW Office Monthly</fullName>
            </value>
            <value>
                <fullName>VOW Office Semi Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>