force-app/main/default/objects/TREND_IDX_Premium_Product__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IDX Subscriber</fullName>
            </value>
            <value>
                <fullName>IDX Office</fullName>
            </value>
            <value>
                <fullName>IDX/VOW</fullName>
            </value>
            <value>
                <fullName>Office Website Data</fullName>
            </value>
            <value>
                <fullName>VOW</fullName>
            </value>
            <value>
                <fullName>MRIS XactSite Office</fullName>
            </value>
            <value>
                <fullName>MRIS XactSite Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>