force-app/main/default/objects/TREND_IDX_Premium_Product__c/fields/Vendor_2__c.field-meta.xml
<CustomField>
    <fullName>Vendor_2__c</fullName>
    <label>Vendor 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>