force-app/main/default/objects/TREND_IDX_Premium_Product__c/fields/Vendor_3__c.field-meta.xml
<CustomField>
    <fullName>Vendor_3__c</fullName>
    <label>Vendor 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>