force-app/main/default/objects/TREND_IDX_Premium_Product__c/fields/Vendor_4__c.field-meta.xml
<CustomField>
    <fullName>Vendor_4__c</fullName>
    <label>Vendor 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>