force-app/main/default/objects/TREND_IDX_Premium_Product__c/fields/Website_2__c.field-meta.xml
<CustomField>
    <fullName>Website_2__c</fullName>
    <label>Website 2</label>
    <type>Url</type>
</CustomField>