force-app/main/default/objects/TREND_IDX_Premium_Product__c/fields/Website_3__c.field-meta.xml
<CustomField>
    <fullName>Website_3__c</fullName>
    <label>Website 3</label>
    <type>Url</type>
</CustomField>