force-app/main/default/objects/TREND_IDX_Premium_Product__c/fields/Website_4__c.field-meta.xml
<CustomField>
    <fullName>Website_4__c</fullName>
    <label>Website 4</label>
    <type>Url</type>
</CustomField>