force-app/main/default/objects/TREND_IDX_Premium_Product__c/fields/Website_Start_Date_4__c.field-meta.xml
<CustomField>
    <fullName>Website_Start_Date_4__c</fullName>
    <label>Website Start Date 4</label>
    <type>Date</type>
</CustomField>