force-app/main/default/objects/TREND_IDX_Premium_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MRIS_Subscription_ID__c</columns>
    <columns>Product_Status__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Sub_Type__c</columns>
    <columns>Member__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>